[workspace]
default-members = ["crates/ark/cli"]
members = [
    "crates/ark/api",
    "crates/ark/cli",
    "crates/ark/core",
    "crates/ark/core/k8s",
    "crates/dash/api",
    "crates/dash/broker/web",
    "crates/dash/client",
    "crates/dash/collector",
    "crates/dash/collector/api",
    "crates/dash/gateway",
    "crates/dash/kubegraph",
    "crates/dash/openapi",
    "crates/dash/operator",
    "crates/dash/pipe/api",
    "crates/dash/pipe/connectors/liveness",
    "crates/dash/pipe/connectors/storage",
    "crates/dash/pipe/connectors/webcam",          # exclude(alpine)
    "crates/dash/pipe/functions/identity",
    "crates/dash/pipe/functions/performance-test",
    "crates/dash/pipe/functions/python",           # exclude(alpine)
    "crates/dash/pipe/functions/python/provider",  # exclude(alpine)
    "crates/dash/pipe/provider",
    "crates/dash/provider",
    "crates/dash/provider/api",
    "crates/dash/provider/client",
    "crates/dash/query/cli",
    "crates/dash/query/provider",
    "crates/kiss/ansible",
    "crates/kiss/api",
    "crates/kiss/cli",
    "crates/kiss/dns",
    "crates/kiss/gateway",
    "crates/kiss/manager",
    "crates/kiss/monitor",
    "crates/kiss/operator",
    "crates/kubegraph/api",
    "crates/kubegraph/connector/fake",
    "crates/kubegraph/connector/http",
    "crates/kubegraph/connector/local",
    "crates/kubegraph/connector/prometheus",
    "crates/kubegraph/dependency/graph",
    "crates/kubegraph/dependency/solver",
    "crates/kubegraph/function/fake",
    "crates/kubegraph/function/webhook",
    "crates/kubegraph/gateway",
    "crates/kubegraph/graph/local",
    "crates/kubegraph/graph/memory",
    "crates/kubegraph/market/client",
    "crates/kubegraph/market/entity",
    "crates/kubegraph/market/function",
    "crates/kubegraph/market/function/blackhole",
    "crates/kubegraph/market/gateway",
    "crates/kubegraph/market/migration",
    "crates/kubegraph/market/solver",
    "crates/kubegraph/market/solver/api",
    "crates/kubegraph/market/solver/trivial",
    "crates/kubegraph/operator",
    "crates/kubegraph/parser",
    "crates/kubegraph/runner",
    "crates/kubegraph/simulator",
    "crates/kubegraph/solver/ortools",
    "crates/kubegraph/trader",
    "crates/kubegraph/visualizer/egui",
    "crates/kubegraph/vm/http",
    "crates/kubegraph/vm/lazy",
    "crates/kubegraph/vm/local",
    "crates/straw/api",
    "crates/straw/provider",
    "crates/straw/provider/oci",
    "crates/straw/provider/python",
    "crates/straw/provider/python/standalone",     # exclude(alpine)
    "crates/vine/api",
    "crates/vine/bastion",
    "crates/vine/operator",
    "crates/vine/plugin",
    "crates/vine/rbac",
    "crates/vine/session",
    "crates/vine/storage",
]
resolver = "2"

[profile.dev]
opt-level = 1 # serde + tracing may causes stack overflow

[workspace.package]
authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Deploy & Integrate & Manage your own Converged K8S Edge Clusters"
documentation = "https://docs.rs/kiss-api"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["iac", "kubernetes", "openark"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "./README.md"
rust-version = "1.80"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"
version = "0.1.0"

[workspace.lints.clippy]
blocks_in_conditions = "allow" # opentelemetry tracing macro would be noisy

[workspace.dependencies]
actix-cors = { version = "0.7" }
actix-multipart = { version = "0.7", features = ["derive", "tempfile"] }
actix-web = { version = "4.9", default-features = false, features = ["macros"] }
actix-web-opentelemetry = { version = "0.19", features = ["metrics"] }
anyhow = { version = "1.0", features = ["backtrace"] }
arrow = { version = "52" } # should be synced with deltalake and lancedb
argon2 = { version = "0.5" }
async-nats = { version = "0.37", default-features = false, features = [
    "server_2_10",
] }
async-recursion = { version = "1.1" }
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
avt = { version = "0.14" }
base64 = { version = "0.22" }
byteorder = { version = "1.5" }
bytes = { version = "1.8" }
byte-unit = { version = "5.1" }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { package = "ciborium", version = "0.2" }
clap = { version = "4.5", features = ["derive", "env", "string"] }
csv = { version = "1.3" }
ctrlc = { version = "3.4" }
deltalake = { version = "0.21", features = [
    "datafusion",
    "datafusion-ext",
    "json",
] }
derivative = { version = "2.2" }
dirs = { version = "5.0" }
duration-string = { version = "0.4" }
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    "wgpu",
    "x11",
] }
egui = { version = "0.29" }
egui_graphs = { version = "0.22" }
email_address = { version = "0.2" }
futures = { version = "0.3" }
gethostname = { version = "0.5" }
glob = { version = "0.3" }
hickory-server = { version = "*", default-features = false, features = [
    "backtrace",
] }
home = { version = "0.5" }
http-cache-reqwest = { version = "0.15", features = ["manager-cacache"] }
image = { version = "0.25", default-features = false }
inflector = { package = "Inflector", version = "0.11" }
ipnet = { version = "2.10", features = ["schemars", "serde"] }
itertools = { version = "0.13" }
k8s-openapi = { version = "0.23", features = ["schemars", "v1_30"] }
kube = { version = "0.96", default-features = false }
lalrpop = { version = "0.22" }
lalrpop-util = { version = "0.22", features = ["lexer", "unicode"] }
lancedb = { version = "0.12", default-features = false }
# langchain-rust = { version = "4.1", default-features = false }
mime = { version = "0.3" }
# FIXME: push a PR: rustls-tls feature support
minio = { git = "https://github.com/ulagbulag/minio-rs.git", version = "0.2.0-alpha", default-features = false } # not deployed to crates.io
maplit = { version = "1.0" }
ndarray = { version = "0.16" }
num-traits = { version = "0.2" }
object_store = { version = "0.11", default-features = false }
octocrab = { version = "0.41", default-features = false, features = [
    "default-client",
] }
opencv = { version = "0.93", default-features = false, features = [
    "clang-runtime",
] }
opentelemetry = { version = "0.27", features = [
    "metrics",
    "spec_unstable_logs_enabled",
    "trace",
] }
opentelemetry-appender-tracing = { version = "0.27", features = [
    # "experimental_metadata_attributes",
    "spec_unstable_logs_enabled",
] }
opentelemetry-otlp = { version = "0.27", features = [
    "logs",
    "metrics",
    "trace",
] }
opentelemetry-proto = { version = "0.27", features = ["with-serde", "zpages"] }
opentelemetry_sdk = { version = "0.27", features = [
    "metrics",
    "rt-tokio",
    "spec_unstable_logs_enabled",
    "trace",
] }
or-tools = { git = "https://github.com/ulagbulag/or-tools-rs", version = "0.1", default-features = false, features = [
    "build-native",
    "solver-all",
] }
# ort-sys = { version = "2.0.0-rc.2", features = [  # add onnxruntime library support for `langchain-rust` crate
#     "download-binaries",
#     "load-dynamic",
# ] }
ordered-float = { version = "4.5", default-features = false, features = [
    "bytemuck",
    "schemars",
    "serde",
    "std",
] }
petgraph = { version = "0.6" }
polars = { version = "0.44", features = [
    "async",
    "cloud",
    "diagonal_concat",
    "diff",
    "fmt",
    "lazy",
    # "nightly",  # include(nightly)
    "parquet",
    "performant",
    "random",
    "rank",
    "serde",
    "serde-lazy",
    "sql",
    "streaming",
] }
procfs = { version = "0.17" }
prometheus-http-query = { version = "0.8", default-features = false }
pyo3 = { version = "0.21" }
r2r = { version = "0.9" }
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
    "palette",
    "underline-color",
] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
regex = { version = "1.11" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
reqwest-middleware = { version = "0.4" }
resolv-conf = { version = "0.7" }
rmp-serde = { version = "1.3" }
sas = { version = "0.1", default-features = false, features = [
    "numa",  # exclude(alpine)
    "rayon",
] }
schemars = { version = "0.8", features = [
    "chrono",
    "derive",
    "preserve_order",
    "uuid1",
] }
sea-orm = { version = "1.1", default-features = false, features = [
    "macros",
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-time",
    "with-uuid",
] } # should be synced with sea-orm
semver = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" } # NOTE: deprecated on Mar 25, 2024; who will take it over?
sha2 = { version = "0.10" }
sio = { git = "https://github.com/ulagbulag/sio-rs.git" }
sled = { version = "0.34" }
strum = { version = "0.26", features = ["derive"] }
tera = { version = "1.19" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.12", features = [
    "gzip",
] } # should be synced with opentelemetry-proto
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.28", features = [
    "metrics",
    "tracing-log",
] } # should be synced with opentelemetry
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "tracing-log",
] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.11", features = ["js", "serde", "v4"] }
which = { version = "7.0" }
winit = { version = "0.30", features = [
    "wayland",
] } # should be synced with eframe

[patch.crates-io]
# FIXME: Waiting for PR merged: https://github.com/GREsau/schemars/pull/255
schemars = { git = "https://github.com/ulagbulag/schemars" }
