[package]
name = "ipwis-binding"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary WASI Interpretation Service Binding of NetAI Cloud"
documentation = "https://docs.rs/ipwis-binding"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
ipwis-kernel-common = { git = "https://github.com/ulagbulag-village/ipwis" }
