[package]
name = "ark-cli"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ark"
path = "./src/main.rs"

[features]
default = ["kubernetes", "local"]
kubernetes = ["ark-provider-kubernetes"]
local = ["ark-provider-local"]

[dependencies]
ark-provider-api = { path = "../provider/api" }
ark-provider-kubernetes = { path = "../provider/kubernetes", optional = true }
ark-provider-local = { path = "../provider/local", optional = true }
ark-api = { path = "../api" }
ipis = { workspace = true }

clap = { workspace = true }
strum = { workspace = true }
