[package]
name = "ark-cli"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ark"
path = "./src/main.rs"

[dependencies]
ark-core = { path = "../core" }
ark-api = { path = "../api" }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
