[package]
name = "ark-cli"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ark"
path = "./src/main.rs"

[dependencies]
ark-core = { path = "../core" }
ark-core-k8s = { path = "../core/k8s", features = ["data"] }
dash-pipe-api = { path = "../../dash/pipe/api" }
dash-query-cli = { path = "../../dash/query/cli" }
vine-api = { path = "../../vine/api" }
vine-rbac = { path = "../../vine/rbac" }

anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
itertools = { workspace = true }
procfs = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
