[package]
name = "ark-controller"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-actor-api = { path = "../actor/api" }
ark-actor-kubernetes = { path = "../actor/kubernetes" }
ark-actor-local = { path = "../actor/local" }
ark-api = { path = "../api" }
ipis = { workspace = true }
kiss-api = { path = "../../kiss/api" }

inflector = { workspace = true }
regex = { workspace = true }
