[package]
name = "ark-controller"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-api = { path = "../api" }
ark-provider-api = { path = "../provider/api" }
ark-provider-kubernetes = { path = "../provider/kubernetes" }
ark-provider-local = { path = "../provider/local" }
ipis = { workspace = true }
kiss-api = { path = "../../kiss/api" }

inflector = { workspace = true }
regex = { workspace = true }
