[package]
name = "ark-controller"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-api = { path = "../api" }
ark-core = { path = "../core" }
ark-core-k8s = { path = "../core/k8s" }
ark-provider-api = { path = "../provider/api" }
ark-provider-kubernetes = { path = "../provider/kubernetes" }
ark-provider-local = { path = "../provider/local" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
inflector = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
log = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
