[package]
name = "kubegraph"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../ark/core", features = ["actix-web", "ctrlc"] }
kubegraph-api = { path = "./api" }
kubegraph-client = { path = "./client" }

anyhow = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
prometheus-http-query = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
