[package]
name = "dash-actor"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of NetAI Cloud"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
i-want-to-cleanup-all-before-running-for-my-testing = []

[dependencies]
dash-api = { path = "../api" }
ipis = { workspace = true }
kiss-api = { path = "../../kiss/api" }

inflector = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tera = { workspace = true }
