[package]
name = "dash-cli"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dash"
path = "./src/main.rs"

[dependencies]
ark-core = { path = "../../ark/core" }
dash-provider = { path = "../provider" }

anyhow = { workspace = true }
clap = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
